--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!-- http://127.0.0.1/ -->
 <html>
 <head>
-<title> MyWeb</title> <!-- 網頁名稱 -->
+<title> 管理資訊系統 期末</title> <!-- 網頁名稱 -->
 </head> 
-<h1> 大標題 </h1>
+<h1> 期末報告 </h1>
 <hr> <!-- 分隔線 -->
 <br> <!-- 換行 -->
 <p> 讚讚 <!-- <p> 每個段落的換行 -->
 <h2> <b> 小標題 </b> </h2> <!-- <b> 加深字體 -->
 <body>
-the good content
+the good content 
 </body>
 <ul> <!-- 項目欄 -->
 <li> 我是項目的標籤 </li> <!-- 項目欄的標籤 -->
