--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!-- http://127.0.0.1/ -->
-<!-- 
+<!-- https://tommygood.github.io/WebTest1/index.html -->
 <html>
 <head>
 <title> 管理資訊系統 期末</title> <!-- 網頁名稱 -->
 </head> 
-<h1> 期末報告 </h1>
+h1 {
+    color:red;
+    font-size:28pt;
+}
+<h1 align = center> 期末報告 </h1>
 <hr> <!-- 分隔線 -->
 <br> <!-- 換行 -->
-<p> 讚讚 <!-- <p> 每個段落的換行 -->
-<h2> <b> 小標題 </b> </h2> <!-- <b> 加深字體 -->
-<body>
+<!-- <p> 讚讚 <!-- <p> 每個段落的換行 --> 
+<!-- <h2> <b> 小標題 </b> </h2> <!-- <b> 加深字體 --> 
+<!-- <body>
 the good content 
-</body>
+</body> -->
 <ul> <!-- 項目欄 -->
-<li> 我是項目的標籤 </li> <!-- 項目欄的標籤 -->
-<li><a href = "http://www.google.com">我是超連結的名字</a></li> <!-- <a href = "網址">超連結名字</a></li>  -->
+<!-- <li> 我是項目的標籤 </li>  項目欄的標籤 -->
+<li><a href = "https://public.tableau.com/views/_16376599020520/6?:language=zh-TW&:retry=yes&publish=yes&:display_count=n&:origin=viz_share_link">tableau public</a></li> <!-- <a href = "網址">超連結名字</a></li>  -->
 </ul>
-<img src="C:/Users/quanbro/Desktop/UnityFolder/MoblieTest/Assets/Images/DragonBody.png" alt="My picture">
-<div class='tableauPlaceholder' id='viz1640673979238' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16376599020520&#47;4' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1640673979238');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<img src="https://ppt.cc/fY9tFx@.png" alt="My picture" width = "100" height = "100" align = "center" >
+<div class='tableauPlaceholder' id='viz1640755389536' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16376599020520&#47;4' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1640755389536');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 <!-- 路徑要用 / 不是 \ -->
 </html>
