--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
 <title> 管理資訊系統 期末</title> <!-- 網頁名稱 -->
 </head> 
+<style type="text/css">
 h1 {
     color:red;
-    font-size:28pt;
+    font-size:40pt;
 }
+</style>
 <h1 align = center> 期末報告 </h1>
 <hr> <!-- 分隔線 -->
 <br> <!-- 換行 -->
