--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ h1 {
 <h1 align = center> 期末報告 </h1>
 <hr> <!-- 分隔線 -->
 <br> <!-- 換行 -->
+本文瀏覽次數: <script type="text/javascript" language="Javascript" src="C:\Users\quanbro\Desktop\Programming\Website\Test\article_counter.php"></script>
 <!-- <p> 讚讚 <!-- <p> 每個段落的換行 --> 
 <!-- <h2> <b> 小標題 </b> </h2> <!-- <b> 加深字體 --> 
 <!-- <body>
