--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@ h1 {
         </li>
     </ol>
     <hr>
-    <p>
+    <p style = "font-size:18pt">
         為了更好地了解不同疾病的人數，我們製作了依照顏色區分的長條圖。
         <br>
         並且區隔不同年份的數據，以便比較出不同年份的各種疾病數量的增減。
-    </p style = "font-size:18pt">
+    </p>
     <div class='tableauPlaceholder' id='viz1641629796776' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416285607250&#47;sheet0' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641629796776');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-    <p>
+    <p style = "font-size:18pt">
         為了比較不同性別在同一種疾病的人數，我們使用了相並排的長條圖以利直接比較。
         <br>
         這樣能夠很輕鬆地在相同疾病中，比對出男女間的數量是較高或較低。
