--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@ h1 {
 }
     </style>
     <h1 align = center> 期末報告
-    <img src="https://ppt.cc/fY9tFx@.png" alt="My picture" width = "100" height = "100" align = "right" >
+        <img src="https://ppt.cc/fY9tFx@.png" alt="My picture" width = "100" height = "100" align = "right" >
     </h1>
-    <a href = "https://public.tableau.com/views/_16376599020520/6?:language=zh-TW&:retry=yes&publish=yes&:display_count=n&:origin=viz_share_link">tableau public
+    <a href = "https://public.tableau.com/views/_16376599020520/6?:language=zh-TW&:retry=yes&publish=yes&:display_count=n&:origin=viz_share_link">
+        <p style = "font-size:18pt">
+            tableau public
+        </p>
     </a> <!-- <a href = "網址">超連結名字</a></li>  -->
     
-    <p> 網頁瀏覽次數 :
-    <br> <!-- 換行 -->
-    <img src="https://hitwebcounter.com/counter/counter.php?page=7922826&style=0006&nbdigits=3&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>  
+    <p style = "font-size:18pt"> 網頁瀏覽次數 :
+        <br> <!-- 換行 -->
+        <img width = 100 src="https://hitwebcounter.com/counter/counter.php?page=7922826&style=0006&nbdigits=3&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>  
     </p>
     <hr> <!-- 分隔線 -->
     <!-- 本文瀏覽次數: <script type="text/javascript" language="Javascript" src="C:\Users\quanbro\Desktop\Programming\Website\Test\article_counter.php"></script> -->
@@ -60,30 +63,59 @@ h1 {
         </li>
     </ol>
     <hr>
+    <p style = "font-size:24pt">
+        <b>
+            I.
+        </b>
+    </p>
     <p style = "font-size:18pt">
         為了更好地了解不同疾病的人數，我們製作了依照顏色區分的長條圖。
         <br>
         並且區隔不同年份的數據，以便比較出不同年份的各種疾病數量的增減。
     </p>
     <div class='tableauPlaceholder' id='viz1641629796776' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416285607250&#47;sheet0' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641629796776');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <hr>
+    <p style = "font-size:24pt">
+        <b>
+            Ⅱ.
+        </b>
+    </p>
     <p style = "font-size:18pt">
         為了比較不同性別在同一種疾病的人數，我們使用了相並排的長條圖以利直接比較。
         <br>
         這樣能夠很輕鬆地在相同疾病中，比對出男女間的數量是較高或較低。
     </p>
     <div class='tableauPlaceholder' id='viz1641628455472' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416284465740&#47;sheet0' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641628455472');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <hr>
+    <p style = "font-size:24pt">
+        <b>
+            Ⅲ.
+        </b>
+    </p>
     <p style = "font-size:18pt">
         為了找出患者相對比較多的月份，我們使用了能夠讓人一目了然的折線圖。
         <br>
         這樣能夠找出哪一個月份的患者特別多，並再根據線索找出可能會造成這一時期患者特別多的原因。
     </p>
     <div class='tableauPlaceholder' id='viz1641630332912' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416302932540&#47;sheet2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641630332912');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <hr>
+    <p style = "font-size:24pt">
+        <b>
+            Ⅳ.
+        </b>
+    </p>
     <p style = "font-size:18pt">
         為了比較不同地區的疾病，我們首先先把依據D1案件分類的案件分成比較大的群組，比如說像是一些西醫的疾病都統一在西醫這個類別裡。
         <br>
-        然後再根據不同的鄉鎮市區，去區分不同疾病在不同鄉鎮的百分比率，最後再依據依據百分比來區分顏色，越深代表比例越高。
+        然後再根據不同的鄉鎮市區，去區分不同疾病在相同鄉鎮的百分比率，最後再依據百分比來區分顏色，越深代表比例越高。
     </p>
     <div class='tableauPlaceholder' id='viz1641630459791' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416304050860&#47;sheet0_1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641630459791');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <hr>
+    <p style = "font-size:24pt">
+        <b>
+            Ⅴ.
+        </b>
+    </p>
     <p style = "font-size:18pt">
         為了找出哪一些年齡的族群可能會較容易得哪些疾病，我們先把每一種不同的疾病區分開來。
         <br>
