--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- https://tommygood.github.io/WebTest1/index.html -->
 <html>
     <head>
-        <meta name = "viewport" content = "width = device-width, initial-scale= 1.0" />
+        <!-- <meta name = "viewport" content = "width = device-width, initial-scale= 1.0" /> -->
         <title> 管理資訊系統 期末
         </title> <!-- 網頁名稱 -->
     </head> 
