--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@ h1 {
         為了更好地了解不同疾病的人數，我們製作了依照顏色區分的長條圖。
         <br>
         並且區隔不同年份的數據，以便比較出不同年份的各種疾病數量的增減。
+        <br>
+        其中，我們發現中醫的患者有逐年下降的趨勢。根據衛生福利部統計處資料，臺灣看中醫的人數持續下降，從三○％降至二七％，平均一年減少十二萬人次。
+        <br>
+        其原因可能是民眾對於中醫的了解仍停留在阿嬤時代的刻板印象，認為中醫藥不科學、療效慢，緩不濟急。
     </p>
     <div class='tableauPlaceholder' id='viz1641629796776' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416285607250&#47;sheet0' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641629796776');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <hr>
@@ -84,6 +88,12 @@ h1 {
         為了比較不同性別在同一種疾病的人數，我們使用了相並排的長條圖以利直接比較。
         <br>
         這樣能夠很輕鬆地在相同疾病中，比對出男女間的數量是較高或較低。
+        <br>
+        舉例來說，神經科的女性很明顯大於男性。於是我們查詢之後發現女性罹患失智症的比例偏高有三大原因。
+        <br>
+        第一是女性平均壽命較為長壽，65歲過後，每5歲就會增加一倍的風險；第二是受到女性在停經後缺少雌激素的作用，較容易罹患失智症；第三造成失智的「ApoE4基因」對女性的風險較高
+        <br>
+        另外，中醫的女性患者數量也大於男性。因為荷爾蒙失調的症狀會在女性身上更加明顯，在這種情況下，許多女性會選擇吃中藥解決。
     </p>
     <div class='tableauPlaceholder' id='viz1641628455472' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416284465740&#47;sheet0' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641628455472');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <hr>
@@ -96,8 +106,12 @@ h1 {
         為了找出患者相對比較多的月份，我們使用了能夠讓人一目了然的折線圖。
         <br>
         這樣能夠找出哪一個月份的患者特別多，並再根據線索找出可能會造成這一時期患者特別多的原因。
+        <br>
+        其中小兒科在換季及冬季的時候患者明顯較多，就能看出環境突然的變遷是造成的原因之一。
     </p>
     <div class='tableauPlaceholder' id='viz1641630332912' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416302932540&#47;sheet2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641630332912');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <!-- start from 2:40 -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/u-yiWOoVOzg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <hr>
     <p style = "font-size:24pt">
         <b>
@@ -108,8 +122,20 @@ h1 {
         為了比較不同地區的疾病，我們首先先把依據D1案件分類的案件分成比較大的群組，比如說像是一些西醫的疾病都統一在西醫這個類別裡。
         <br>
         然後再根據不同的鄉鎮市區，去區分不同疾病在相同鄉鎮的百分比率，最後再依據百分比來區分顏色，越深代表比例越高。
+        <br>
+        其中，名間鄉的預防保健的比例明顯還要高出其他鄉鎮許多。
+        <br>
+        於是查詢之後發現，在名間鄉的八間診所中，有六間提供了預防保健的服務。
+        <br>
+        且名間鄉人口外流嚴重，當地的居民多是年紀較大居多，所以也造成了需要多檢查身體的現象。
     </p>
-    <div class='tableauPlaceholder' id='viz1641630459791' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416304050860&#47;sheet0_1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641630459791');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <div class='tableauPlaceholder' id='viz1641630459791' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416304050860&#47;sheet0_1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641630459791');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>        
+
+    <span class = "clinic" >
+        <img src = "https://ppt.cc/f5CpIx@.jpg" width = 780 height = 500/>
+        <img src = "https://ppt.cc/fQrfex@.jpg" width = 720 height = 500 align = "right"/>
+        <!-- <img src = "https://ppt.cc/fNbpdx@.jpg" width = 720 height = 500/> -->
+    </span>
     <hr>
     <p style = "font-size:24pt">
         <b>
