--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <html>
     <head>
         <!-- <meta name = "viewport" content = "width = device-width, initial-scale= 1.0" /> -->
-        <title> 管理資訊系統 期末
+        <title> 
+            管理資訊系統 期末
         </title> <!-- 網頁名稱 -->
     </head> 
     <style type="text/css">
-h1 {
-    color:red;
-    font-size:40pt;
-}
+    h1 {
+        color:red;
+        font-size:40pt;
+    }
     </style>
     <h1 align = center> 期末報告
         <img src="https://ppt.cc/fY9tFx@.png" alt="My picture" width = "100" height = "100" align = "right" >
@@ -73,7 +74,7 @@ h1 {
         <br>
         並且區隔不同年份的數據，以便比較出不同年份的各種疾病數量的增減。
         <br>
-        其中，我們發現中醫的患者有逐年下降的趨勢。根據衛生福利部統計處資料，臺灣看中醫的人數持續下降，從三○％降至二七％，平均一年減少十二萬人次。
+        其中，我們發現中醫的患者有逐年下降的趨勢。根據衛生福利部統計處資料，臺灣看中醫的人數持續下降，從三十％降至二七％，平均一年減少十二萬人次。
         <br>
         其原因可能是民眾對於中醫的了解仍停留在阿嬤時代的刻板印象，認為中醫藥不科學、療效慢，緩不濟急。
     </p>
@@ -91,7 +92,7 @@ h1 {
         <br>
         舉例來說，神經科的女性很明顯大於男性。於是我們查詢之後發現女性罹患失智症的比例偏高有三大原因。
         <br>
-        第一是女性平均壽命較為長壽，65歲過後，每5歲就會增加一倍的風險；第二是受到女性在停經後缺少雌激素的作用，較容易罹患失智症；第三造成失智的「ApoE4基因」對女性的風險較高
+        第一是女性平均壽命較為長壽，65歲過後，每5歲就會增加一倍的風險；第二是受到女性在停經後缺少雌激素的作用，較容易罹患失智症；第三造成失智的「ApoE4基因」對女性的風險較高。
         <br>
         另外，中醫的女性患者數量也大於男性。因為荷爾蒙失調的症狀會在女性身上更加明顯，在這種情況下，許多女性會選擇吃中藥解決。
     </p>
@@ -125,9 +126,11 @@ h1 {
         <br>
         其中，名間鄉的預防保健的比例明顯還要高出其他鄉鎮許多。
         <br>
-        於是查詢之後發現，在名間鄉的八間診所中，有六間提供了預防保健的服務。
+        於是查詢之後發現，在名間鄉的<b>八</b>間診所中，有<b>六</b>間提供了預防保健的服務。
         <br>
-        且名間鄉人口外流嚴重，當地的居民多是年紀較大居多，所以也造成了需要多檢查身體的現象。
+        另外，衛福部提供40歲以上未滿65歲的民眾每三年一次、55歲以上原住民以及65歲以上民眾的免費預防保健的服務。
+        <br>
+        再加上名間鄉交通不便，年輕人口外流嚴重，當地的居民多是年紀較大居多，所以也造成了預防保健的比例較高的現象。
     </p>
     <div class='tableauPlaceholder' id='viz1641630459791' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416304050860&#47;sheet0_1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641630459791');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>        
 
@@ -146,6 +149,22 @@ h1 {
         為了找出哪一些年齡的族群可能會較容易得哪些疾病，我們先把每一種不同的疾病區分開來。
         <br>
         最後再依照患者的出生日期來區分，就能夠很輕易地找出某些疾病的高風險族群。
+        <br>
+        其中我們觀察到，結核病的患者大多是集中在年齡較高的部分。
+        <br>
+        根據衛生福利部疾病管制署公布之年報資料，個案的年齡主要以≧65歲者為多，發生率隨著年齡增加上升。
+        <br>
+        我們的數據也符合這個論述。
+        <br>
+        除此之外，也可以觀察到洗腎的病人也都是集中在年齡較高的族群。
+        <br>
+        台灣腎臟衰竭原因，有九成都是慢性腎衰竭。造成慢性腎衰竭的原因除了基因之外，
+        <br>
+        很大一部分是因為有其他疾病，長期的影響腎臟所引起。比如說台灣最常見的就是糖尿病、高血壓。
+        <br>
+        尤其是隨著年齡增長，人體的代謝速度變慢，澱粉類的代謝開始變差，澱粉過多的熱量就會轉化成油脂，堆積在血管裡面就會容易肥胖，而造成一些後續疾病。
+        <br>
+        所以也可以觀察到，西醫慢性病的族群也是非常集中在中高齡的族群。
     </p>
     <div class='tableauPlaceholder' id='viz1641630551915' style='position: relative'><noscript><a href='#'><img alt=' ' src='8Y&#47;8YXYSG6T6&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;8YXYSG6T6' /> <param name='toolbar' value='yes' /><param name='static_image' value='8Y&#47;8YXYSG6T6&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641630551915');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 </html>
