--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <!-- ctx.fillRect(500,90,800,60); -->
             var img = new Image();
             img.src = "195831.jpg";
-            ctx.drawImage(img,100,50,cvs.width,csv.height);
+            img.onload = function() { // 圖片載入完成才丟上去
+                ctx.drawImage(this,100,50,cvs.width,csv.height);
+            }
         }
     </script>
     <h1 align = center> 期末報告
