--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             var ctx = cvs.getContext("2d");
             <!-- ctx.fillRect(500,90,800,60); -->
             var img = new Image();
-            img.src = "195831.jpg";
+            img.src = "cat.jpg";
             img.onload = function() { // 圖片載入完成才丟上去
                 ctx.drawImage(this,100,50,cvs.width,csv.height);
             }
