--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             管理資訊系統 期末
         </title> <!-- 網頁名稱 -->
     </head> 
-    <style type="text/css">
+    <style>
     h1 {
         color:red;
         font-size:40pt;
@@ -42,7 +42,6 @@
                 <a href = "#content">台灣民眾對中醫的熱忱不再</a>
             </I>
         </li> 
-        
         <li> 
             <I>
                 <a href = "#content1">探討神經及中醫科的患者女性大於男性原因</a>
