--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!-- http://127.0.0.1/ -->
-<!-- https://tommygood.github.io/WebTest1/index.html -->
-<html>
-    <body style = "background-color:rgb(240, 240, 240);">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<body style = "background-color:rgb(240, 240, 240);">
         <head>
             <!-- <meta name = "viewport" content = "width = device-width, initial-scale= 1.0" /> -->
             <title> 
@@ -231,4 +231,12 @@
         </p>
         <div class='tableauPlaceholder' id='viz1641895724181' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416305171250&#47;sheet4' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641895724181');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     </body>
+<hr>
+<fieldset>
+<legend>基本範例1: 讀取表單輸入值</legend>
+<form action="1.web1.py" method="post" >
+輸入查詢姓名<input type="text" name='myData'>
+<input type="submit">
+</form>
+</fieldset>
 </html>
